# synchrosaurus

./: .gitignore  README.md  make_test_dir.sh
synchrosaurus_core/: CMakeLists.txt  main.cpp  sqlite.cpp
synchrosaurus_core/include/synchrosaurus_core/: directory_scanner.hpp  file_mode_printer.hpp  sqlite.hpp  sqlite_result_codes.hpp  statx.hpp
synchrosaurus_core/src/: directory_scanner.cpp  file_mode_printer.cpp  main.cpp  sqlite.cpp
test_files/: Document.odt  HelloWorld  MyText.txt  sha256sums.txt
